<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Magic Val</string>
    
    <string name="home_subtitle">Developed by Paul Gibler</string>
    
    <string name="display_single_card_activity">Display Single Card</string>
    <string name="search_for_activity">Search For Cards</string>
    
    <string name="main_search_label">Search card prices</string>
    <string name="search_label">Search</string>
    <string name="card_name_label">Card Name</string>
    <string name="high_price_label">High:</string>
    <string name="low_price_label">Low:</string>
    <string name="median_price_label">Median:</string>
    <string name="prices_label">Prices</string>
    
    <string name="loading_text">Loading</string>
    
    <string name="card_name_textview_placeholder">Card Name</string>
    
    <string name="search_for_closest_match_edit_text_hint">Input card name</string>
    
    <string name="search_for_closest_submit_button">Search</string>
    
    <string name="card_search_row_name">Name</string>
    <string name="card_search_row_price">Price</string>
    
</resources>